
version 0.6.0 (cvs)

	- using MPI code from http://www.cs.dartmouth.edu/~sting/mpi/ as a
	replacement for the GMP dependancy

	Features
	- support for sending legacy invitations via Place service

	Bug Fixes
	- Crash and other problems with joining a Place
	
version 0.5.0 (2005-10-28)

	- added meanwhile-doc package, with html and latex docs and
	sample code
	
	Features
	- Automatically breaks up large messages for transport (using
	NotesBuddy multi-segment messages)
	- Support for DH RC2/128 channel encryption
	- Support for DH RC2/128 login encryption
	- RFE #1307892 Support for Announcements
	- Support for chats via the Places service
	
	Bug Fixes
	- Bug #1239210 Unspecified fatal error when VPN disconnects
	- Fixed memleaks and crashes in the aware service (which needs
	to be re-written sometime soon)
	
version 0.4.2 (2005-05-27)
	
	Features
	- RFE #1054813 Privacy support
	- Support for updates from attribute deletes in aware service
	
	Bug Fixes
	- Bug #1194631 Windows file transfer crashes gaim
	- Bug #1200841 Sametime 2.0 clients responses not seen
	
version 0.4.1 (2005-05-01)

	Features
	- Support for File Transfers (mwServiceFileTransfer)
	- Support for getting/setting Aware attributes
	- Support sending the LoginCont message in response to a
	LoginRedirect
	- Support for multi-segment messages from NotesBuddy (fixes
	problems with large MIME, text, and HTML messages)
	
	Bug Fixes
	- Bug #1192747 Crash when someone initiate talk with me
	- Bug #1168421 crash when opening specific contacts
	- Problem with NAB group members not being announced after the
	initial group status update
	
version 0.4.0 (2005-03-18)

	- installed header file names have changed to now have a "mw_"
	prefix

	Features
	- RFE #994716 Support for Server-side Groups to Aware Service
	- RFE #1077794 NotesBuddy style formatting
	- Support for resolve service

	Bug Fixes
	- Bug #1008335 Error in common.c when compiling on x86_64
	- Bug #1021353 meanwhile won't build w/Sun GNOME2