@@ -925,58 +925,3 @@ void mwAwareSnapshot_clear(struct mwAwareSnapshot *idb) {
   memset(idb, 0x00, sizeof(struct mwAwareSnapshot));
 }
 
-
-const char *mwLoginType_getName(enum mwLoginType type) {
-  switch(type) {
-  case mwLogin_LIB:
-    return "Lotus Binary Library";
-
-  case mwLogin_JAVA_WEB:
-    return "Lotus Java Client Applet";
-
-  case mwLogin_BINARY:
-    return "Lotus Sametime Connect";
-
-  case mwLogin_JAVA_APP:
-    return "Lotus Java Client Application";
-
-  case mwLogin_LINKS:
-    return "Lotus Sametime Links";
-
-  case mwLogin_NOTES_6_5:
-  case mwLogin_NOTES_6_5_3:
-  case mwLogin_NOTES_7_0_beta:
-  case mwLogin_NOTES_7_0:
-    return "Lotus Notes Client";
-
-  case mwLogin_ICT:
-  case mwLogin_ICT_1_7_8_2:
-  case mwLogin_ICT_SIP:
-    return "IBM Community Tools";
-
-  case mwLogin_NOTESBUDDY_4_14:
-  case mwLogin_NOTESBUDDY_4_15:
-  case mwLogin_NOTESBUDDY_4_16:
-    return "Alphaworks NotesBuddy";
-
-  case mwLogin_SANITY:
-    return "Sanity";
-
-  case mwLogin_ST_PERL:
-    return "ST-Send-Message";
-
-  case mwLogin_PMR_ALERT:
-    return "PMR Alert";
-
-  case mwLogin_TRILLIAN:
-  case mwLogin_TRILLIAN_IBM:
-    return "Trillian";
-
-  case mwLogin_MEANWHILE:
-    return "Meanwhile";
-
-  default:
-    return NULL;
-  }
-}
-
